@@ -1,3 +1,7 @@
+2007-07-02  Bastien Nocera  <hadess@hadess.net>
+
+	* POTFILES.in: remove libegg files from the list
+
 2007-04-22  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Djihed Afifi.
